Add methodology section to index.html
Added methodology section with weighted proportions.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
     <div><span class="color-box unknown"></span> Unknown</div>
   </div>
 
+  <div class="methodology">
+  <h4>Methodology</h4>
+  <p>
+    Percentages represent weighted symbolic proportions based on channeled
+    Primary / Secondary / Tertiary classifications.
+  </p>
+  <ul>
+    <li>Primary = 60%</li>
+    <li>Secondary = 30%</li>
+    <li>Tertiary = 10%</li>
+    <li>True splits = 50% / 50%</li>
+    <li>Primary only = 100%</li>
+  </ul>
+</div>
+
+
   <div id="country-details">
     <p>Click a country to explore.</p>
   </div>
